<resources>
    <string name="app_name">InClass08</string>
    <string name="currentExpenses">Current Expenses : </string>
    <string name="noExpenses">There is no expense to show, Please add your expenses from the menu.</string>
    <string name="nameString">Name : </string>
    <string name="categoryString">Category : </string>
    <string name="amountString">Amount : </string>
    <string name="dateString">Date : </string>
    <string name="expenseDetails">Expense Details</string>
    <string name="closeString">Close</string>
    <string name="cancelString">Cancel</string>
    <string name="emptyString"></string>
    <string name="addExpenseString">Add Expense</string>
    <string name="addExpense">Add An Expense</string>
    <string name="addExpenseName">Expense Name</string>
    <string name="addExpenseCategory">Category</string>
    <string name="addExpenseAmount">Amount</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="planets_array">
        <item>Groceries</item>
        <item>Invoice</item>
        <item>Transportation</item>
        <item>Shopping</item>
        <item>Rent</item>
        <item>Trips</item>
        <item>Utilities</item>
        <item>Other</item>
    </string-array>
</resources>
