<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_show_expense"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.d3c0d3r.inclass08.DisplayDetails">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/expenseDetails"
        android:textSize="20sp"
        android:gravity="center"
        android:id="@+id/showExpeHead"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/showExpeHead"
        android:text="@string/nameString"
        android:textSize="20sp"
        android:id="@+id/textViewShowExpName"
        android:layout_marginTop="10sp"
        android:padding="5sp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewShowExpName"
        android:text="@string/categoryString"
        android:textSize="20sp"
        android:id="@+id/textViewShowExpCategory"
        android:layout_marginTop="10sp"
        android:padding="5sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewShowExpCategory"
        android:text="@string/amountString"
        android:textSize="20sp"
        android:id="@+id/textViewShowExpAmount"
        android:layout_marginTop="10sp"
        android:padding="5sp"/>
   <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewShowExpAmount"
        android:text="@string/dateString"
        android:textSize="20sp"
        android:id="@+id/textViewShowExpDate"
        android:layout_marginTop="10sp"
        android:padding="5sp"/>

    <Button
        android:text="@string/closeString"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="73dp"
        android:id="@+id/buttonDisplayCancel" />


</RelativeLayout>
